# id2221-data-intensive-traffic

./: .env  README.md  docker-compose.yml  main.py  mongo_query.py  producer.py  producer_manager.py  pyproject.toml  report.sty  requirements.txt  spark_stream_simple.py  test_trafiklab.py  web_dashboard.py
.ipynb_checkpoints/: docker-compose-checkpoint.yml  main-checkpoint.py
ivy-cache/cache/com.google.code.findbugs/jsr305/: ivydata-3.0.0.properties
ivy-cache/cache/commons-logging/commons-logging/: ivydata-1.1.3.properties
ivy-cache/cache/io.netty/netty-bom/: ivydata-4.1.84.Final.properties
ivy-cache/cache/org.apache.commons/commons-parent/: ivydata-28.properties  ivydata-52.properties
ivy-cache/cache/org.apache.commons/commons-pool2/: ivydata-2.11.1.properties
ivy-cache/cache/org.apache.hadoop/hadoop-client-api/: ivydata-3.3.4.properties
ivy-cache/cache/org.apache.hadoop/hadoop-client-runtime/: ivydata-3.3.4.properties
ivy-cache/cache/org.apache.hadoop/hadoop-main/: ivydata-3.3.4.properties
ivy-cache/cache/org.apache.hadoop/hadoop-project/: ivydata-3.3.4.properties
ivy-cache/cache/org.apache.kafka/kafka-clients/: ivy-3.3.2.xml  ivydata-3.3.2.properties
ivy-cache/cache/org.apache.spark/spark-parent_2.12/: ivy-3.4.0.xml.original  ivydata-3.4.0.properties
ivy-cache/cache/org.apache.spark/spark-sql-kafka-0-10_2.12/: ivy-3.4.0.xml  ivy-3.4.0.xml.original  ivydata-3.4.0.properties
notebooks/: cassandra-init.ipynb  kafka-cassandra-lab-tutorial.ipynb  kafka-demo-lab.ipynb  kafka-lab-tutorial.ipynb
templates/: dashboard.html
(+20 files in other folders)
