[project]
name = "id2221-data-intensive-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cassandra-driver>=3.29.2",
    "jupyterlab>=4.4.7",
    "kafka-python-ng>=2.2.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pymongo>=4.15.3",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
